--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,6 +1,13 @@
 body {
     background-color: #3B3131;
 }
+.main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    height: 100vh;
+}
 .banner {
     font-family: "Bebas Neue", sans-serif;
     font-weight: 400;
@@ -20,5 +27,5 @@ body {
 }
 
 .nav p {
-    padding:0px 50px 50px 50px;
+    margin: 0rem 1rem 1rem 1rem;
 }
