--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,6 +15,8 @@ body {
     color: #FAF7F7;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
 }
 
 .nav {
@@ -28,4 +30,9 @@ body {
 
 .nav p {
     margin: 0rem 1rem 1rem 1rem;
+}
+
+.banner img {
+    border-radius: 50%;
+    height: 5rem;
 }
