--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -28,8 +28,17 @@ body {
     justify-content: center;
 }
 
-.nav p {
+.zoom {
+  transition: transform .2s; 
+  }
+
+.zoom:hover {
+  transform: scale(1.5); /* enlarges any element with this class on hover */
+}
+
+.nav a {
     margin: 0rem 1rem 1rem 1rem;
+    color: #FAF7F7;
 }
 
 .banner img {
