--- a/resources/css/projects.css
+++ b/resources/css/projects.css
@@ -18,6 +18,7 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    border-top: 4rem;
 }
 
 .nav {
@@ -42,6 +43,19 @@ body {
 
 .zoom:hover {
   transform: scale(1.5); /* enlarges any element with this class on hover */
+}
+
+.project-tile {
+    height: 10rem;
+    width: 12rem;
+    border-radius: 10%;
+    align-items: center;
+    display: flex;
+}
+
+.project-tile img {
+    width: 100%;
+    height: 100%;
 }
 
 .nav a {
