--- a/resources/css/about-me.css
+++ b/resources/css/about-me.css
@@ -8,7 +8,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
     height: 100%;
     min-height: 100vh;
 }
@@ -18,7 +17,7 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    border-top: 4rem;
+    margin-top: 4rem;
 }
 
 .nav {
