--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1,28 +1,26 @@
 body {
     background-color: #3B3131;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 .main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-content: center;
-    height: 100vh;
+    height: 100%;
+    min-height: 100vh;
 }
 .banner {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     color: #FAF7F7;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    margin-top: 4rem;
 }
 
 .nav {
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
     color: #FAF7F7;
     display: flex;
     justify-content: center;
