--- a/resources/css/blog.css
+++ b/resources/css/blog.css
@@ -33,7 +33,7 @@ body {
     margin-left: auto;
     margin-right: auto;
     max-width: 36rem;
-    min-width: 36rem;
+    min-width: auto;
 }
 
 .content-header {
